--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,8 +4,9 @@
      <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile-img" src="{{site.baseurl}}/assets/images/{% if site.pic %}{{ site.pic }}{% else %}profile.png{% endif %}" alt="profile picture" />
-                <h1 class="name">{% if site.name %}{{site.name}}{% else %}Alan Doe{% endif %}</h1>
-                <h3 class="tagline">{% if site.tagline %}{{site.tagline}}{% else %}Full Stack Developer{% endif %}</h3>
+                <h1 class="name">{% if site.name %}{{site.name}}{% else %}Nikonorov Igor{% endif %}</h1>
+                <h3 class="tagline">{% if site.tagline %}{{site.tagline}}{% else %}System administrator/DevOps{% endif %}</h3>
+                <h3 class="tagline"><a href="http://inik.tk/">Download CV in pdf</a></h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
@@ -14,7 +15,7 @@
                    {% if site.email %}
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: {{site.email}}">{{site.email}}</a></li>
                     {% else %}
-                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto:alan.doe@website.com">alan.doe@website.com</a></li>
+                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto:igor.nikonorov@gmail.com">igor.nikonorov@gmail.com</a></li>
                     {% endif %}
 <!--                    
                     {% if site.phone %}
@@ -26,25 +27,23 @@
                     {% if site.website %}
                     <li class="website"><i class="fa fa-globe"></i><a href="http://{{site.website}}" target="_blank">{{site.website}}</a></li>
                     {% else %}
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://blog.webjeda.com" target="_blank">blog.webjeda.com</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="http://inik.tk" target="_blank">inik.tk</a></li>
                     {% endif %}
                     
                     {% if site.linkedin %}
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://in.linkedin.com/in/{{site.linkedin}}" target="_blank">linkedin.com/in/{{site.linkedin}}</a></li>
                     {% else %}
-                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://in.linkedin.com/in/sharath-kumar-87669956" target="_blank">linkedin.com/in/sharathdt</a></li>
+                    <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://in.linkedin.com/in/igor-nikonorov-3784774b" target="_blank">linkedin.com/in/igor-nikonorov-3784774b</a></li>
                     {% endif %}
                     
                     {% if site.github %}
                     <li class="github"><i class="fa fa-github"></i><a href="http://github.com/{{site.github}}" target="_blank">github.com/{{site.github}}</a></li>
                     {% else %}
-                    <li class="github"><i class="fa fa-github"></i><a href="http://github.com/sharu725" target="_blank">github.com/sharu725</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="http://github.com/nikonorovi" target="_blank">github.com/nikonorovi</a></li>
                     {% endif %}
                     
                   <!--  {% if site.twitter %}
                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/{{site.twitter}}" target="_blank">{{site.twitter}}</a></li>
-                    {% else %}
-                     <li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/@webjeda" target="_blank">@webjeda</a></li>
                     {% endif %}
 -->
                     
