--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
                 <img class="profile-img" src="{{site.baseurl}}/assets/images/{% if site.pic %}{{ site.pic }}{% else %}profile.png{% endif %}" alt="profile picture" />
                 <h1 class="name">{% if site.name %}{{site.name}}{% else %}Nikonorov Igor{% endif %}</h1>
                 <h3 class="tagline">{% if site.tagline %}{{site.tagline}}{% else %}System administrator/DevOps{% endif %}</h3>
-                <h6 class="tagline"><a href="http://inik.tk/">Download CV in pdf</a></h6>
+                <h6 class="cv_pdf"><a href="http://inik.tk/">Download CV in pdf</a></h6>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
